--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,11 @@
- <%= semantic_form_for @user do |form| %>
-    <%= form.inputs %>
-    <%= form.buttons %>
+ <%= semantic_form_for @user do |f| %>
+    <%= f.inputs do %>
+	    <%= f.input :name %>
+	    <%= f.input :username %>
+	    <%= f.input :email %>
+	    <%= f.input :password %>
+	    <%= f.input :password_confirmation, :required => true %>
+    <% end %>
+    <%= f.buttons %>
   <% end %>
 
