--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= semantic_form_for @event do |f| %>
+<%= semantic_form_for @event, :validate => true do |f| %>
   <%= f.inputs do %>
     <%= f.input :title %>
     <%= f.input :start_date, :as => :string %>
