--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,13 +1,12 @@
-<%= semantic_form_for @event, :validate => true do |f| %>
-  <%= f.inputs do %>
+<%= simple_form_for @event, 
+  :html => { :class => 'form-horizontal' }, 
+  :validate => true do |f| %>
     <%= f.input :title %>
     <%= f.input :start_date, :as => :string %>
     <%= f.input :end_date, :as => :string %>
     <%= f.input :max_att %>
     <%= f.input :description, :as => :text %>
-  <% end %>
-  <%= f.buttons do %>
-    <%= f.commit_button %>
-  <% end %>
+    <%= f.button :submit%>
+    <input type="hidden" name="event_id" value="<%= @event.id %>">
 <% end %>
 
