--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,19 @@
-<h1>Listing users</h1>
-
-<table>
+<h1>Brukere</h1>
+<table class="table table-striped" >
   <tr>
-    <th>Username</th>
-    <th>Email</th>
-    <th>Password</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Brukernavn
+    <th>Email
+    <th>
+    <th>
+    <th>
   </tr>
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
-    <td><%= user.email %></td>
-    <td><%= user.password %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= user.username %>
+    <td><%= user.email %>
+    <td><%= link_to 'Rediger', edit_user_path(user) %>
+    <td><%= link_to 'Slett', user, confirm: 'Er du sikker?', method: :delete %>
   </tr>
 <% end %>
 </table>
