--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -12,7 +12,7 @@
   <tr>
     <td><%= field.field_label %>
     <td><%= link_to 'Edit', edit_event_field_path(@event, field) %></td>
-    <td><%= link_to 'Destroy', @event, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Slett', @field, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
