--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= link_to 'Edit', edit_field_path(@field) %> |
-<%= link_to 'Back', fields_path %>
+<%= link_to 'Edit', edit_event_field_path(@event, @field) %> |
+<%= link_to 'Back', event_fields_path(@event) %>
