--- a/app/views/events/_add_element.html.erb
+++ b/app/views/events/_add_element.html.erb
@@ -1,1 +1,1 @@
-<a href="<%= new_event_field_path(@event)%>" title="Legg til nytt felt" class="btn add-element">Nytt felt</a>
+<%= link_to "Ny", new_event_field_path(@event), :class => 'btn btn-primary add-field' %>
