--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,8 +5,11 @@
     <%= f.input :start_date, :as => :string %>
     <%= f.input :end_date, :as => :string %>
     <%= f.input :max_att %>
-    <%= f.input :description, :as => :text %>
-    <%= f.button :submit %>
+    <%= f.input :description, :as => :text,  :input_html => { :class => 'wysiwyg',:rows => 10 } %>
     <input type="hidden" name="event_id" value="<%= @event.id %>">
+    <div class="form-actions">
+	    <%= f.submit nil, :value => "Lagre", :class => 'btn btn-primary' %>
+	    <%= link_to 'Avbryt', events_path(), :class => 'btn' %>
+  </div>
 <% end %>
 
