--- a/app/views/events/_field_form.html.erb
+++ b/app/views/events/_field_form.html.erb
@@ -1,7 +1,10 @@
-<tr class="field" id="field<%=field.id%>" >
-<%= simple_form_for [@event, field], :wrapper => :default do |f| %>
-  <%= f.error_notification %>
+<li class="field" id="field<%= field.id %>">
+<table  > 
+	<tr>
 
+<%= simple_form_for [@event, field], :wrapper => :default, :validate => true do |f| %>
+  <%= f.error_notification %>
+		
   <td>
     <%= f.input :field_label, :label => "Tittel", :id => "#{field.id}" %>
   <td>
@@ -15,7 +18,8 @@
   <td>
     <%= f.submit :submit, :class => "btn btn-primary",:value => "Lagre", :id => 'submit-field' %>  
     <%= link_to 'Slett', [@event,field], confirm: 'Er du sikker?', method: :delete, :class => 'btn btn-danger delete-field', :id => 'delete-field'  %>
-
 <% end %>
-</tr>
+	</tr>
+</table>
+</li>
 
