Bug fixes to adding and deleting field with javascript in event edit view

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -41,7 +41,7 @@
 
 #fields li:hover { background-color: #f5f5f5;}
 
-.ui-state-highlight {
+#fields .ui-state-highlight {
   background-image: none;
   list-style: none; 
   height: 40px;
