--- a/app/views/events/replies.html.erb
+++ b/app/views/events/replies.html.erb
@@ -5,6 +5,7 @@
     <% @event.fields.each do |f| %>
       <th><%= f.field_label %></th>
     <% end -%>
+    <th>Handlinger</th>
   </thead>
   <tbody>
     
@@ -13,9 +14,9 @@
   <% reply.field_replies.each do |fr| %>
       <td><%= fr.content %></td>
   <% end -%>
-      <td><%= link_to 'Show', reply %></td>
-      <td><%= link_to 'Edit', edit_reply_path(reply) %></td>
-      <td><%= link_to 'Destroy', reply, confirm: 'Are you sure?', method: :delete %></td>
+      <td><%= link_to 'Show', reply %> | 
+      <%= link_to 'Edit', edit_reply_path(reply) %> | 
+      <%= link_to 'Destroy', reply, confirm: 'Are you sure?', method: :delete %></td>
     </tr>
 <% end %>
   </tbody>
