export to excel and foundation for slug in field_label

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
 					  <li class="<%= is_active?("events")%>" >
 					    <%= link_to "Events", events_path %>
 					  </li>
+					  <li class="<%= is_active?("replies")%>">
+					  	<%= link_to "Påmeldte", replies_path %>
+					  </li>
 					  <li class="<%= is_active?("users")%>">
 					  	<%= link_to "Brukere", users_path %>
 					  </li>
