--- a/app/views/events/replies.html.erb
+++ b/app/views/events/replies.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing replies</h1>
 
-<table class="table">
+<table class="table table-striped">
   <thead>
     <% @event.fields.each do |f| %>
       <th><%= f.field_label %></th>
@@ -14,8 +14,8 @@
   <% reply.field_replies.each do |fr| %>
       <td><%= fr.content %></td>
   <% end -%>
-      <td><%= link_to 'Show', reply %> | 
-      <%= link_to 'Edit', edit_reply_path(reply) %> | 
+      <td><%# link_to 'Show', reply %>  
+      <%# link_to 'Edit', edit_reply_path(reply) %> 
       <%= link_to 'Destroy', reply, confirm: 'Are you sure?', method: :delete %></td>
     </tr>
 <% end %>
