--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -1,15 +1,20 @@
 <h1>Listing replies</h1>
 
-<table class="table">
-  <tr>
-   
-  </tr>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Navn</th>
+      <th>Påmeldte</th>
+      <th>Handlinger</th>
+    </tr>
+  </thead>
 
 <% @events.each do |event| %>
     <tr>
       <td><%= event.title %></td>
-      <td><%= link_to 'Show', replies_event_path(event) %></td>
-      <td><%# link_to 'Edit', edit_event_path(event) %></td>
+      <td><%= event.replies_count %>/<%= event.max_att %></td>
+      <td><%= link_to 'Show', replies_event_path(event) %> | <%= link_to 'Export to excel', replies_event_path(event, format: "xls") %> 
+      <%# link_to 'Export to csv', replies_event_path(event, format: "csv") %> </td>
       <td><%# link_to 'Destroy', event, confirm: 'Are you sure?', method: :delete %></td>
     </tr>
 <% end %>
