added public layout. confirmation message for event. admin scope. latest replies and events on dashboard.

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -5,6 +5,12 @@
 
 #event_description { width:500px }
 
+.toggle-basic {
+  cursor: pointer;
+}
+
+.edit-form { display: none; }
+
 .add-element { margin-bottom: 19px; }
 
 #fields {
