--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,54 @@
 <h1>Dashboard</h1>
+
+<div class="row-fluid">
+  <div class="span6 pull-left">
+  	<div class="well">
+	  	<h2>Siste påmeldinger</h2>
+				<table class="table table-striped table-condensed">
+					<thead>
+						<tr>
+							<th>Påmelding</th>
+							<th>Event</th>
+						</tr>
+					</thead>
+					<tbody>
+  					<% @last_replies.each do |reply| %>
+							<tr>
+								<td>
+									<%= reply.field_replies.map{|fr| fr.content}.join(", ") %>
+								</td>
+								<td>
+									<%= link_to reply.event.title, edit_event_path(reply.event) if reply.event %>	
+								</td>
+							</tr>
+						<% end -%>
+					</tbody>
+				</table>
+  	</div>
+  </div>
+  <div class="span6 pull-left">
+  	<div class="well">
+	  	<h2>Siste events</h2>
+	  	<table class="table table-striped table-condensed">
+				<thead>
+					<tr>
+						<th>Event</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @last_events.each do |event| %>
+						<tr>
+							<td>
+								<%= 	event.title %>
+							</td>
+							<td>
+								<%= link_to	"Påmeldte", replies_event_path(event), class: "btn btn-mini" %>
+							</td>
+						</tr>
+					<% end -%>
+				</tbody>
+			</table>
+  	</div>
+  </div>
+</div>
