--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= event.start_date.strftime("%d. %b %Y") %> - <%= event.end_date.strftime("%d. %b %Y") %>
     <td>
       <%= link_to 'Rediger', edit_event_path(event), :class => 'btn btn-mini'%>
-      <%= link_to 'Slett', event, confirm: 'Er du sikker?', method: :delete,  :class => 'btn btn-mini btn-danger' %>
+      <%= link_to 'Slett', event, confirm: 'Er du sikker?', method: :delete,  :remote => true, :class => 'btn btn-mini btn-danger' %>
   </tr>
 <% end %>
 </table>
