--- a/app/views/events/replies.html.erb
+++ b/app/views/events/replies.html.erb
@@ -1,27 +1,32 @@
-<h1>Listing replies</h1>
-
+<h1><%= @event.title %> påmeldte</h1>
+<%= form_tag "/admin/replies/delete" do %>
 <table class="table table-striped">
   <thead>
-    <% @event.fields.each do |f| %>
+    <th class="action-checkbox"><%= check_box_tag "select_all", "", false, :id => "select_all"  %></th>
+    <% @event.fields_by_order.each do |f| %>
       <th><%= f.field_label %></th>
     <% end -%>
     <th>Handlinger</th>
   </thead>
   <tbody>
     
-<% @replies.each do |reply| %>
+  <% @replies.each do |reply| %>
     <tr>
-  <% reply.field_replies.each do |fr| %>
+      <td class="action-checkbox"><%= check_box_tag "reply_ids[]", reply.id %></td>
+    <% reply.field_replies_all.each do |fr| %>
       <td><%= fr.content %></td>
-  <% end -%>
+    <% end -%>
       <td><%# link_to 'Show', reply %>  
       <%# link_to 'Edit', edit_reply_path(reply) %> 
-      <%= link_to 'Destroy', reply, confirm: 'Are you sure?', method: :delete %></td>
+      <%= link_to 'Destroy', reply, class: "btn btn-mini btn-danger", confirm: 'Are you sure?', method: :delete %></td>
     </tr>
-<% end %>
+  <% end %>
   </tbody>
 </table>
+<button class="btn">Delete</button>
+<!-- </form> -->
+<% end -%>
 
 <br />
 
-<%= link_to 'New Reply', new_reply_path %>
+<%#= link_to 'New Reply', new_reply_path %>
