--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
+  <%= csrf_meta_tag %>
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/themes/redmond/jquery-ui.css">
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
@@ -23,13 +24,16 @@
 					</a>
 		      <ul class="nav">
 		      	<% #if logged_in?%>
-					  <li class="<%= is_active?("events")%>" >
+					  <li class="<%= is_active?("admin", "index")%>" >
+					    <%= link_to "Dashboard", dashboard_path %>
+					  </li>
+					  <li class="<%= is_active?("events", "index")%>" >
 					    <%= link_to "Events", events_path %>
 					  </li>
-					  <li class="<%= is_active?("replies")%>">
+					  <li class="<%= is_active?("replies", "index")%>">
 					  	<%= link_to "Påmeldte", replies_path %>
 					  </li>
-					  <li class="<%= is_active?("users")%>">
+					  <li class="<%= is_active?("users", "index")%>">
 					  	<%= link_to "Brukere", users_path %>
 					  </li>
 					  <% #end %>
@@ -43,15 +47,17 @@
 		    </div>
 		  </div>
 		</div>
-	</header>	
-	<% if notice != nil %>
-		<div class='alert alert-info'><%= notice %></div>
-	<% end %>
-	<% if alert != nil %>
-		<div class='alert alert-error'><%= alert %></div>
-	<% end %>
+	</header>
+	<div id="content">
+		<% if notice != nil %>
+			<div class='alert alert-info'><%= notice %></div>
+		<% end %>
+		<% if alert != nil %>
+			<div class='alert alert-error'><%= alert %></div>
+		<% end %>
 
-	<%= yield %>
+		<%= yield %>
+	</div>
 
 </div><!-- /container -->
 </body>
