--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -12,14 +12,15 @@
 <% @events.each do |event| %>
     <tr>
       <td><%= event.title %></td>
-      <td><%= event.replies_count %>/<%= event.max_att %></td>
-      <td><%= link_to 'Show', replies_event_path(event) %> | <%= link_to 'Export to excel', replies_event_path(event, format: "xls") %> 
+      <td><%= event.replies_count ? event.replies_count : 0  %>/<%= event.max_att %></td>
+      <td><%= link_to 'Show', replies_event_path(event), class: "btn btn-mini" %>
+        <%= link_to '<i class="icon-file"></i>'.html_safe, replies_event_path(event, format: "xls"), class: "btn btn-mini", title: "Eksporter til excel" %> 
       <%# link_to 'Export to csv', replies_event_path(event, format: "csv") %> </td>
-      <td><%# link_to 'Destroy', event, confirm: 'Are you sure?', method: :delete %></td>
+      <!-- <td><%# link_to 'Destroy', event, confirm: 'Are you sure?', method: :delete %></td> -->
     </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Reply', new_reply_path %>
+<%#= link_to 'New Reply', new_reply_path %>
