minor changes to layout and removed old confirmation page

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -14,7 +14,7 @@
 <body>
 
 <div id="container" class="container">
-	<h1>RubyReg</h1>
+	<h1><a href="/">RubyReg</a></h1>
 	<% if notice != nil %>
 		<div class='alert alert-info'><%= notice %></div>
 	<% end %>
