--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @event.title %> <small class="toggle-basic">Rediger basic info</small></h1> 
+<h1><%= @event.title %> <small class="toggle-basic">Rediger info</small></h1> 
 	<div class="edit-form">
 		<%= render 'form' %>
 	</div>
