--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -11,13 +11,10 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="login">
 
 <div id="container" class="container">
-  <header>
-	 <h1><a href="/">RubyReg</a></h1> 
-  </header>
-	<%= render "layouts/alerts", locals: {notice => notice, alert => alert} %>
+  <%= render "layouts/alerts", locals: {notice => notice, alert => alert} %>
 
 	<%= yield %>
 
