Some changes to dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -18,7 +18,7 @@
 									<%= reply.field_replies.map{|fr| fr.content}.join(", ") %>
 								</td>
 								<td>
-									<%= link_to reply.event.title, replies_event_path(reply.event) if reply.event %>	
+									<%= link_to reply.event.title, replies_event_path(reply.event) if reply.event %>
 								</td>
 							</tr>
 						<% end -%>
@@ -40,9 +40,10 @@
 					<% @last_events.each do |event| %>
 						<tr>
 							<td>
-								<%= 	event.title %>
+								<%= link_to event.title, replies_event_path(event)%>
 							</td>
 							<td>
+								<%#= link_to	"Påmeldinger", replies_event_path(event), class: "btn btn-mini" %>
 								<%= link_to	"Rediger", edit_event_path(event), class: "btn btn-mini" %>
 							</td>
 						</tr>
