--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,12 +3,12 @@
 <div class="row-fluid">
   <div class="span6 pull-left">
   	<div class="well">
-	  	<h2>Siste påmeldinger</h2>
+	  	<h2><%= t ".last_replies" %></h2>
 				<table class="table table-striped table-condensed">
 					<thead>
 						<tr>
-							<th>Påmelding</th>
-							<th>Event</th>
+							<th><%= Reply.model_name.human(count: 2) %></th>
+							<th><%= Event.model_name.human %></th>
 						</tr>
 					</thead>
 					<tbody>
@@ -28,11 +28,11 @@
   </div>
   <div class="span6 pull-left">
   	<div class="well">
-	  	<h2>Siste events</h2>
+	  	<h2><%= t ".last_events" %></h2>
 	  	<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Event</th>
+						<th><%= Event.model_name.human %></th>
 						<th></th>
 					</tr>
 				</thead>
@@ -43,8 +43,8 @@
 								<%= link_to event.title, replies_event_path(event)%>
 							</td>
 							<td>
-								<%#= link_to	"Påmeldinger", replies_event_path(event), class: "btn btn-mini" %>
-								<%= link_to	"Rediger", edit_event_path(event), class: "btn btn-mini" %>
+								<%= link_to	t(:edit), edit_event_path(event), class: "btn btn-mini" %>
+								<%= link_to	Reply.model_name.human(count: 2), replies_event_path(event), class: "btn btn-mini" %>
 							</td>
 						</tr>
 					<% end -%>
