--- a/app/views/events/_field_form.html.erb
+++ b/app/views/events/_field_form.html.erb
@@ -1,10 +1,10 @@
 <li class="field" id="field<%= field.id %>">
-<table  > 
+<table  >
 	<tr>
 
 <%= simple_form_for [@event, field], :wrapper => :default, :validate => true do |f| %>
   <%= f.error_notification %>
-		
+
   <td>
     <%= f.input :field_label, :label => "Tittel", :input_html => { id: "field#{field.id}_field_label"}, :label_html => { for: "field#{field.id}_field_label"} %>
   <td>
@@ -16,8 +16,8 @@
     <%= f.input :event_id, :as => :hidden %>
     <%= f.input :field_order, :as => :hidden %>
   <td>
-    <%= f.submit :submit, :class => "btn btn-primary",:value => "Lagre", :id => 'submit-field' %>  
-    <%= link_to 'Slett', [@event,field], confirm: 'Er du sikker?', method: :delete, :class => 'btn btn-danger delete-field', :id => 'delete-field'  %>
+    <%= f.submit :submit, :class => "btn btn-primary",:value => "Lagre", :id => 'submit-field' %>
+    <%= link_to 'Slett', [@event,field], confirm: t(:delete_confirm), method: :delete, :class => 'btn btn-danger delete-field', :id => 'delete-field'  %>
 <% end %>
 	</tr>
 </table>
