--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing replies</h1>
+<h1><%= t(".participants") %></h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Navn</th>
-      <th>Påmeldte</th>
-      <th>Handlinger</th>
+      <th><%= Event.human_attribute_name("title") %></th>
+      <th><%= t(".participants") %></th>
+      <th><%= t(:actions) %></th>
     </tr>
   </thead>
 
@@ -13,9 +13,9 @@
     <tr>
       <td><%= link_to event.title, replies_event_path(event) %></td>
       <td><%= event.replies_count ? event.replies_count : 0  %>/<%= event.max_att %></td>
-      <td><%= link_to 'Vis', replies_event_path(event), class: "btn btn-mini" %>
-        <%= link_to '<i class="icon-download-alt icon-large"></i>'.html_safe, replies_event_path(event, format: "xls"), class: "btn btn-mini", title: "Eksporter til excel" %>
-      <%# link_to 'Export to csv', replies_event_path(event, format: "csv") %> </td>
+      <td><%= link_to t(:show), replies_event_path(event), class: "btn btn-mini" %>
+        <%= link_to '<i class="icon-download-alt icon-large"></i>'.html_safe, replies_event_path(event, format: "xls"), class: "btn btn-mini", title: t(".export") %>
+        <%#= link_to 'Export to csv', replies_event_path(event, format: "csv") %> </td>
     </tr>
 <% end %>
 </table>
