--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,11 @@
- <%= simple_form_for @user, 
+ <%= simple_form_for @user,
 	:html => { :class => 'form-horizontal' } do |f| %>
 		<%= f.error_notification %>
     <%= f.input :name %>
-    <%= f.input :username %>
+    <%#= f.input :username %>
     <%= f.input :email %>
     <%= f.input :password %>
-    <%= f.input :password_confirmation, :required => true %>
+    <%= f.input :password_confirmation %>
   	<div class="form-actions">
     <%= f.submit nil, :value => "Lagre", :class => 'btn btn-primary' %>
     <%= link_to 'Avbryt', users_path, :class => 'btn' %>
