--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,23 @@
 <h1>Brukere</h1>
 <table class="table table-striped" >
   <tr>
-    <th>Brukernavn
-    <th>Email
+    <th><%= User.human_attribute_name "name" %>
+    <th><%= User.human_attribute_name "email" %>
     <th>
 
   </tr>
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %>
+    <td><%= user.name %>
     <td><%= user.email %>
     <td>
-      <%= link_to 'Rediger', edit_user_path(user), :class => 'btn btn-mini' %>
-      <%= link_to 'Slett', user, confirm: 'Er du sikker?', :method => :delete, :class => 'btn btn-mini btn-danger' %>
+      <%= link_to t(:edit), edit_user_path(user), :class => 'btn btn-mini' %>
+      <%= link_to t(:delete), user, confirm: t('delete_confirm'), :method => :delete, :class => 'btn btn-mini btn-danger' %>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'Ny bruker', new_user_path, :class => 'btn btn-primary' %>
+<%= link_to t(:new_model, :model => User.model_name.human.downcase) , new_user_path, :class => 'btn btn-primary' %>
