--- a/app/views/events/replies.html.erb
+++ b/app/views/events/replies.html.erb
@@ -27,6 +27,6 @@
     </tbody>
   </table>
   <button class="btn"><%= t(".delete_chosen") %></button>
-  <!-- </form> -->
+  </form>
   <% end -%>
 <% end -%>
