--- a/app/views/replies/index.html.erb
+++ b/app/views/replies/index.html.erb
@@ -13,8 +13,9 @@
     <tr>
       <td><%= link_to event.title, replies_event_path(event) %></td>
       <td><%= event.replies_count ? event.replies_count : 0  %>/<%= event.max_att %></td>
-      <td><%= link_to t(:show), replies_event_path(event), class: "btn btn-mini" %>
-        <%= link_to '<i class="icon-download-alt icon-large"></i>'.html_safe, replies_event_path(event, format: "xls"), class: "btn btn-mini", title: t(".export") %>
+      <td>
+        <%= link_to t(:show), replies_event_path(event), class: "btn btn-mini" %>
+        <%= link_to '<i class="icon-download-alt icon-large"></i>'.html_safe, replies_event_path(event, format: "xls"), class: "btn btn-mini", title: t(".export") if (event.replies_count && event.replies_count > 0) %>
         <%#= link_to 'Export to csv', replies_event_path(event, format: "csv") %> </td>
     </tr>
 <% end %>
