Moved js from events.js.coffee to js views.

--- a/app/views/events/_add_element.html.erb
+++ b/app/views/events/_add_element.html.erb
@@ -1,1 +1,1 @@
-<%= link_to t(:new), new_event_field_path(@event), :class => 'btn btn-primary add-field' %>
+<%= link_to t(:new), new_event_field_path(@event), :class => 'btn btn-primary add-field', :remote => true %>
